# smmdb-lib

./: .babelrc  .gitignore  .npmignore  .travis.yml  791.bundle.js  791.bundle.js.map  Cargo.toml  LICENSE  README.md  build.rs  bundle.js  bundle.js.map  compile.js  course.js  crate_deploy.sh  crate_version_exists.sh  decryptor_linux  deploy.sh  element.js  index.html  index.js  install.sh  jsdoc.json  npm_deploy.sh  npm_version_exists.sh  package-lock.json  package.json  rust-toolchain.toml  save.js  test.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.cargo/: config
.github/workflows/: codeql.yml  test-and-publish.yml
assets/: index-FgK_Ywnl.js  smmdb-3lJSKHzr.js  smmdb_bg-3kemkXMH.wasm
crate/src/: constants.rs  constants2.rs  course.rs  course2.rs  encryption.rs  errors.rs  key_tables.rs  lib.rs  main.rs  thumbnail2.rs
crate/src/proto/: SMM2Course.rs  SMMCourse.rs  Sound.rs  Tile.rs  mod.rs
data/: notify.ntf
docs/: api.md
documentation/: api.md  basic_usage.md  course_file.md  installation.md  serialization.md
examples/web/: .eslintrc  .prettierrc  index.ts  package.json  tsconfig.json  vite.config.js  webpack.dev.js  webpack.prod.js
examples/web/src/: app.tsx  badge.tsx  header.tsx  index.html  index.ts  index.tsx  smmdb.ts
js/: index.js  index.ts
legacy/: course.js  element.js  index.js  main.js  save.js  tnl.js
lib/: block.js  course.js  index.js  save.js  sound.js  tile.js  tnl.js
proto/: SMM2Course.proto  SMMCourse.proto  Sound.proto  Tile.proto
src/: block.js  constants2.rs  course.js  course.rs  course2.rs  element.js  encryption.rs  errors.rs  image.js  index.js  key_tables.rs  lib.rs  main.js  sarc.js  save.js  save.rs  sound.js  thumbnail2.rs  tile.js  tnl.js
src/proto/: SMM2Course.rs  SMMCourse.rs  Sound.rs  Tile.rs  mod.rs  test.rs
test/: test.js
test/course000/: course_data.cdt  course_data_sub.cdt  thumbnail0.tnl
tests/: course.rs  course2.rs  thumbnail2.rs
tests/assets/courses/course000/: course  thumbnail1.tnl
tests/assets/courses/course001/: course_data.cdt  course_data_sub.cdt  thumbnail0.tnl  thumbnail1.tnl
tests/assets/courses/course002/: course  course_data.cdt  course_data_sub.cdt  thumbnail0.tnl  thumbnail1.tnl
tests/assets/courses/course003/: course  course_data.cdt  course_data_sub.cdt  thumbnail0.tnl  thumbnail1.tnl
tests/assets/courses/course004/: course  course_data.cdt  course_data_sub.cdt  thumbnail0.tnl  thumbnail1.tnl
tests/assets/courses/course005/: course  course_data.cdt  course_data_sub.cdt  thumbnail0.tnl  thumbnail1.tnl
tests/assets/saves/smm2/: course_data_120.bcd  course_data_120.decrypted  course_data_121.bcd  course_data_122.bcd  course_data_122.decrypted  course_data_123.decrypted  course_data_125.bcd  course_data_125.decrypted  course_data_126.decrypted  course_data_127.decrypted  course_data_128.bcd  course_data_129.bcd  course_data_129.decrypted  course_data_130.bcd  course_data_130.decrypted  course_data_131.bcd  course_data_131.decrypted  course_data_133.bcd  course_data_133.decrypted  course_data_134.bcd  course_data_134.decrypted  course_data_135.bcd  course_data_135.decrypted  course_data_136.decrypted  course_data_137.bcd  course_data_138.bcd  course_data_139.bcd  course_data_140.decrypted  course_data_141.decrypted  course_data_142.bcd  course_data_142.decrypted  course_data_143.bcd  course_data_143.decrypted  course_data_145.bcd  course_data_145.decrypted  course_data_146.bcd  course_data_147.bcd  course_data_147.decrypted  course_data_148.decrypted  course_data_149.decrypted  (+129 more)
tests/assets/saves/smm2/save1/: course_data_121.decrypted  course_data_123.bcd  course_data_124.bcd  course_data_124.decrypted  course_data_126.bcd  course_data_127.bcd  course_data_128.decrypted  course_data_132.bcd  course_data_132.decrypted  course_data_136.bcd  course_data_137.decrypted  course_data_138.decrypted  course_data_139.decrypted  course_data_140.bcd  course_data_141.bcd  course_data_144.bcd  course_data_144.decrypted  course_data_146.decrypted  course_data_148.bcd  course_data_149.bcd  course_data_150.bcd  course_data_150.decrypted  course_data_151.bcd  course_data_152.decrypted  course_data_153.decrypted  course_data_154.bcd  course_data_155.bcd  course_data_155.decrypted  course_data_156.decrypted  course_data_158.bcd  course_data_159.bcd  course_data_160.bcd  course_data_160.decrypted  course_data_161.bcd  course_data_162.bcd  course_data_164.bcd  course_data_165.bcd  course_data_166.decrypted  course_data_167.decrypted  course_data_168.decrypted  (+92 more)
tests/assets/saves/smm2/save2/: course_data_120.bcd  course_data_120.decrypted  course_data_121.bcd  course_data_121.decrypted  course_data_122.bcd  course_data_122.decrypted  course_data_123.bcd  course_data_123.decrypted  course_data_124.bcd  course_data_124.decrypted  course_data_125.bcd  course_data_125.decrypted  course_data_126.bcd  course_data_126.decrypted  course_data_127.bcd  course_data_127.decrypted  course_data_128.bcd  course_data_128.decrypted  course_data_129.bcd  course_data_129.decrypted  course_data_130.bcd  course_data_130.decrypted  course_data_131.bcd  course_data_131.decrypted  course_data_132.bcd  course_data_132.decrypted  course_data_133.bcd  course_data_133.decrypted  course_data_134.bcd  course_data_134.decrypted  course_data_135.bcd  course_data_135.decrypted  course_data_136.bcd  course_data_136.decrypted  course_data_137.bcd  course_data_137.decrypted  course_data_138.bcd  course_data_138.decrypted  course_data_139.bcd  course_data_139.decrypted  (+260 more)
tutorial/: Import_thumbnail.md  course_manipulation.md  import_thumbnail.md  save_manipulation.md  save_manipulation_and_export.md  serialization.md  thumbnail_manipulation.md
