[package]
authors = ["Mario Reder <mreder1289@gmail.com>"]
categories = ["wasm", "emulators"]
description = "A utility library for Super Mario Maker and Super Mario Maker 2 to read and manipulate game files."
edition = "2018"
license = "MIT"
name = "smmdb"
readme = "./README.md"
repository = "https://github.com/Tarnadas/cemu-smm"
version = "1.4.1"
include = [
    "/src/**/*.rs",
    "/proto/**/*.proto",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE"
]

[build-dependencies]
protobuf-codegen-pure = "2"

[dependencies]
aes-soft= "0.5"
arr_macro = { version = "0.1", optional = true }
arrayref = "0.3"
async-std = { version = "1", optional = true }
block-modes = "0.6"
byteorder = "1"
bytes = { version = "0.5", features = ["serde"] }
cfg-if = "0.1"
chrono = "0.4"
cmac = "0.4"
crc = "1"
hex = "0.4"
image = "0.23"
infer = "0.2"
itertools = "0.9"
protobuf = { version = "2", features = ["with-bytes", "with-serde"] }
rand = "0.7"
regex = "1"
serde = "1"
serde_derive = "1"
wee_alloc = { version = "0.4", optional = true }
tar = "0.4"
thiserror = "1"
typenum = "1"
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
brotli2 = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[dev-dependencies]
colored = "2"
fs_extra = "1"
rayon = "1"
wasm-bindgen-test = "0.3"

[features]
default = ["with-serde"]
with-serde = []
save = ["arr_macro", "async-std"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "smmdb"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile]
[profile.dev]
opt-level = 1

[profile.release]
debug = false
lto = true
codegen-units = 1
